[package]
name = "wgpu-dma-buf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.18.0", features = ["expose-ids"] }
wgpu-hal = { version = "0.18" }
log = "0.4.20"
env_logger = "0.10.1"
pollster = "0.3"
flume = "0.11"
png = "0.17.10"
glow = "0.13.0"