[package]
name = "wgpu-dma-buf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = [ "derive" ] }
wgpu = { version = "^0.19.1" }
wgpu-hal = { version = "^0.19.1" }
log = "0.4.20"
env_logger = "0.11.1"
pollster = "0.3"
flume = "0.11"
png = "0.17.10"
libc = "0.2.152"
sendfd = "0.4.3"
bincode = "1.3.3"
serde = {  version = "1.0" , features = ["derive"] }
glow = "0.13.1"
khronos-egl = { version = "6.0.0" , features = ["static"]}
image = "0.24.8"
glutin = { version = "0.31.2" , features = ["egl"]}
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
winit = "0.29.10"
cgmath = "0.18"
slint = "1.4.1"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"
slint-build = "1.4.1"

[lib]
name = "dma_buf"           # The name of the target.
path = "src/lib.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver_glutin"
path = "src/bin/receiver_glutin.rs"

[[bin]]
name = "receiver_slint"
path = "src/bin/receiver_slint.rs"